--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,12 +7,13 @@ iframe {
     width: 100%;
     height: 100vh;
     border: none;
-    display: block; /* Añadir display: block para evitar posibles problemas de presentación */
+    display: block;
+    overflow: auto; /* Añadir overflow: auto para permitir desplazamiento en el iframe */
 }
 @media only screen and (max-width: 600px) {
     iframe {
-        height: 80vh;
-        max-width: 100%; /* Añadir un ancho máximo para dispositivos móviles */
-        margin: 0 auto; /* Centrar el iframe en dispositivos móviles */
+        height: auto; /* Ajustar la altura automáticamente según el contenido */
+        max-width: 100%;
+        margin: 0 auto;
     }
 }
